# rust-opensource

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  index.html  search-index.js
examples/: not-exist.rs  simple.rs
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/std/error/: trait.Error.js
opensource/: index.html  sidebar-items.js
opensource/client/: fn.all.html  fn.get.html  fn.tagged.html  index.html  sidebar-items.js  struct.ClientError.html
opensource/license/: index.html  sidebar-items.js  struct.Identifier.html  struct.License.html  struct.Link.html  struct.OtherName.html  struct.Text.html
src/: client.rs  lib.rs  license.rs
src/opensource/src/: client.rs.html  lib.rs.html  license.rs.html
