[package]
name = "opensource"
version = "0.1.1"
authors = ["Daniele Tricoli <eriol@mornie.org>"]
license = "BSD-3-Clause"
description = "API Wrapper for the Open Source License API."
keywords = ["api", "opensource"]
repository = "https://github.com/OpenSourceOrg/rust-opensource"
documentation = "https://OpenSourceOrg.github.io/rust-opensource"
readme = "README.md"

[dependencies]
hyper = "0.11.*"
serde = "0.7.*"
serde_json = "0.7.*"
serde_macros = "0.7.*"
url = "1.1.*"
